Rename solvent variables explicitly

--- a/solute_demo.ipynb
+++ b/solute_demo.ipynb
@@ -46,6 +46,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Standard modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -63,7 +70,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Solve pure solvent"
+    "## Global parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 8192\n",
+    "Δr = 0.02\n",
+    "grid = Grid(N, Δr)\n",
+    "r, q = grid.r, grid.q\n",
+    "\n",
+    "verbose = True\n",
+    "\n",
+    "alpha = 0.2\n",
+    "npicard = 500\n",
+    "tol = 1e-12\n",
+    "solver = PicardHNC(grid, alpha=alpha, npicard=npicard, tol=tol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Solve for pure solvent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define interaction parameters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dpd_potential(A, r):\n",
+    "    \"\"\"Define the DPD potential.\"\"\"\n",
+    "    return truncate_to_zero(A/2*(1-r)**2, r, 1)\n",
+    "\n",
+    "def dpd_force(A, r):\n",
+    "    \"\"\"Define dereivative of the DPD potential.\"\"\"\n",
+    "    return truncate_to_zero(A*(1-r), r, 1) # the force f = -dφ/dr\n",
+    "\n",
+    "# Parameters for solvent-solvent interactions\n",
+    "A00 = 25\n",
+    "ρ0 = 3.0\n",
+    "φ0, f0 = dpd_potential(A00, r), dpd_force(A00, r)"
    ]
   },
   {
@@ -75,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,26 +156,8 @@
     }
    ],
    "source": [
-    "A = 25\n",
-    "ρ = 3.0\n",
-    "\n",
-    "N = 8192\n",
-    "Δr = 0.02\n",
-    "grid = Grid(N, Δr)\n",
-    "r, q = grid.r, grid.q\n",
-    "\n",
-    "verbose = True\n",
-    "\n",
-    "# Define the DPD potential, and its derivative, then solve the HNC\n",
-    "# problem.  The arrays here are all size ng-1, same as r[:]\n",
-    "\n",
-    "φ = truncate_to_zero(A/2*(1-r)**2, r, 1) # the DPD potential\n",
-    "f = truncate_to_zero(A*(1-r), r, 1) # the force f = -dφ/dr\n",
-    "\n",
-    "solver = PicardHNC(grid, alpha=0.2, npicard=500, tol=1e-12)\n",
-    "\n",
-    "soln = solver.solve(φ, ρ, monitor=verbose) # solve for the DPD potential\n",
-    "h, c, hq = soln.hr, soln.cr, soln.hq # extract for use in a moment\n"
+    "soln = solver.solve(φ0, ρ0, monitor=verbose) # solve for the DPD potential\n",
+    "h00, c00, hq00 = soln.hr, soln.cr, soln.hq # extract for use in a moment\n"
    ]
   },
   {
@@ -132,7 +174,7 @@
     "$$\n",
     "p = \\rho + \\frac{2\\phi\\rho^3}{3} \\int_0^\\infty \\mathrm{d}r \\, r^3 f(r) g(r)\n",
     "$$\n",
-    "where $f(r) = −\\mathrm{d}\\phi/\\mathrm{d}r$ is the force.  An integration by parts shows that the mean-field contributions, being these with g(r) = 1, are the same.\n",
+    "where $f(r) = −\\mathrm{d}\\phi/\\mathrm{d}r$ is the force. Note that we have assumed $\\beta = 1$ above. An integration by parts shows that the mean-field contributions, being these with g(r) = 1, are the same.\n",
     "\n",
     "Here specifically the mean-field contributions are\n",
     "$$\n",
@@ -142,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,20 +196,27 @@
     }
    ],
    "source": [
-    "e_mf = p_mf = π*A*ρ**2/30\n",
+    "e_mf = p_mf = π*A00*ρ0**2/30\n",
     "\n",
-    "e_xc = 2*π*ρ**2 * np.trapz(r**2*φ*h, dx=Δr)\n",
+    "e_xc = 2*π*ρ0**2 * np.trapz(r**2*φ0*h00, dx=Δr)\n",
     "e_ex = e_mf + e_xc\n",
-    "e = 3*ρ/2 + e_ex\n",
+    "e = 3*ρ0/2 + e_ex\n",
     "\n",
-    "p_xc = 2*π*ρ**2/3 * np.trapz(r**3*f*h, dx=Δr)\n",
+    "p_xc = 2*π*ρ0**2/3 * np.trapz(r**3*f0*h00, dx=Δr)\n",
     "p_ex = p_mf + p_xc\n",
-    "p = ρ + p_ex\n",
+    "p = ρ0 + p_ex\n",
     "\n",
-    "μ_ex = 4*π*ρ * np.trapz(r**2*(h*(h-c)/2 - c), dx=Δr)\n",
-    "μ = np.log(ρ) + μ_ex\n",
+    "μ_ex = 4*π*ρ0 * np.trapz(r**2*(h00*(h00-c00)/2 - c00), dx=Δr)\n",
+    "μ = np.log(ρ0) + μ_ex\n",
     "\n",
     "print(f'μ={μ:.4f} μ_ex={μ_ex:.4f} μ_id={μ-μ_ex:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Introduce solute"
    ]
   },
   {
