Fix typos in eqs

--- a/solute_demo.ipynb
+++ b/solute_demo.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 8192\n",
+    "N = 2**13\n",
     "Δr = 0.02\n",
     "grid = Grid(N, Δr)\n",
     "r, q = grid.r, grid.q\n",
@@ -168,13 +168,13 @@
     "\n",
     "For the integrals here, see Eqs. (2.5.20) and (2.5.22) in Hansen & McDonald, \"Theory of Simple Liquids\" (3rd edition): for the (excess) energy density,\n",
     "$$\n",
-    "e = 2\\pi\\rho^2 \\int_0^\\infty \\mathrm{d}r \\, r^2 \\phi(r) g(r)\n",
+    "e \\equiv \\frac{U^\\mathrm{ex}}{V} = 2\\pi\\rho^2 \\int_0^\\infty \\mathrm{d}r \\, r^2 \\phi(r) g(r)\n",
     "$$\n",
     "and virial pressure,\n",
     "$$\n",
-    "p = \\rho + \\frac{2\\phi\\rho^3}{3} \\int_0^\\infty \\mathrm{d}r \\, r^3 f(r) g(r)\n",
+    "p = \\rho + \\frac{2\\pi\\rho^2}{3} \\int_0^\\infty \\mathrm{d}r \\, r^3 f(r) g(r)\n",
     "$$\n",
-    "where $f(r) = −\\mathrm{d}\\phi/\\mathrm{d}r$ is the force. Note that we have assumed $\\beta = 1$ above. An integration by parts shows that the mean-field contributions, being these with g(r) = 1, are the same.\n",
+    "where $f(r) = −\\mathrm{d}\\phi/\\mathrm{d}r$ is the force. Note that we have assumed $\\beta = 1$ in our expressions, so energy is given in units of $k_\\mathrm{B} T$. An integration by parts shows that the mean-field contributions, being these with g(r) = 1, are the same.\n",
     "\n",
     "Here specifically the mean-field contributions are\n",
     "$$\n",
