added source of Hendrikse et al

--- a/solute_demo.ipynb
+++ b/solute_demo.ipynb
@@ -341,7 +341,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the previously calculated chemical potentials:"
+    "Plot the previously calculated chemical potentials:\n",
+    "digitised from Fig 1 of Hendrikse *et al.*, PCCP **27**, 1554-66 (2025).\n"
    ]
   },
   {
