reverted to using rho0*h00q

--- a/solute_demo.ipynb
+++ b/solute_demo.ipynb
@@ -79,7 +79,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid: ng = 8192 = 2^13, Δr = 0.02, Δq = 0.0192, |FFTW arrays| = 8191\n",
+      "HNC: α = 0.2, tol = 1.0e-12, npicard = 1000\n"
+     ]
+    }
+   ],
    "source": [
     "N = 2**13\n",
     "Δr = 0.02\n",
@@ -91,7 +100,9 @@
     "alpha = 0.2\n",
     "npicard = 1000\n",
     "tol = 1e-12\n",
-    "solvent = PicardHNC(grid, alpha=alpha, npicard=npicard, tol=tol)"
+    "solvent = PicardHNC(grid, alpha=alpha, npicard=npicard, tol=tol)\n",
+    "\n",
+    "print(grid.details + '\\n' + solvent.details)"
    ]
   },
   {
@@ -166,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,11 +263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HNC: α = 0.2, tol = 1.0e-12, npicard = 1000\n"
+     ]
+    }
+   ],
    "source": [
-    "solute = SolutePicardHNC(S00q, grid, alpha=alpha, npicard=npicard, tol=tol)"
+    "solute = SolutePicardHNC(ρ0*h00q, grid, alpha=alpha, npicard=npicard, tol=tol)\n",
+    "print(solute.details)"
    ]
   },
   {
@@ -272,16 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_27720/1257866893.py:41: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_13327/1257866893.py:41: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig1.show()\n",
-      "/tmp/ipykernel_27720/1257866893.py:42: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/tmp/ipykernel_13327/1257866893.py:42: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig2.show()\n"
      ]
     },
@@ -364,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
