Compare with original RPA g(r)

--- a/solute_demo.ipynb
+++ b/solute_demo.ipynb
@@ -150,12 +150,19 @@
     "soln2 = solvent_rpa.solve(φ0, ρ0, monitor=verbose) # solve for the DPD potential\n",
     "h00_rpa, c00_rpa, h00q_rpa = soln2.hr, soln2.cr, soln2.hq # extract for use in a moment\n",
     "\n",
+    "φ0q = grid.fourier_bessel_forward(φ0)\n",
+    "h00q_rpa_pure = -φ0q / (1 + ρ0 * φ0q)\n",
+    "h00_rpa_pure = grid.fourier_bessel_backward(h00q_rpa_pure)\n",
+    "\n",
+    "plt.figure(figsize=(3.375, 3))\n",
     "plt.plot(r, 1+h00, label='HNC')\n",
     "plt.plot(r, 1+h00_rpa, '--', label='RPA/test')\n",
+    "plt.plot(r, 1+h00_rpa_pure, ':', label='RPA original')\n",
     "plt.legend(loc='best')\n",
     "plt.xlabel('$r$')\n",
     "plt.ylabel('$g(r)$')\n",
     "plt.xlim([0, 3])\n",
+    "plt.ylim([0, 1.5])\n",
     "plt.show()"
    ]
   },
@@ -564,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
